overflow bug

--- a/css/index.css
+++ b/css/index.css
@@ -282,6 +282,7 @@ main {
   margin-right: auto;
   border: 2px solid #fff;
   border-radius: 50%;
+  overflow: visible;
 }
 
 .tool-text {
